modules/vpc/main.tf
terraform {
  required_providers {
    aws = {
      source = "hashicorp/aws"
    }
  }
}

resource "aws_vpc" "vpc" {
  cidr_block           = var.vpc_cidr
  instance_tenancy     = "default"
  enable_dns_support   = true
  enable_dns_hostnames = true

  tags = {
    Name = "${var.name_prefix}-VPC"
  }
}

resource "aws_internet_gateway" "igw" {
  vpc_id = aws_vpc.vpc.id

  tags = {
    Name = "${var.name_prefix}-IGW"
  }
}

resource "aws_eip" "nat_eip" {
  count = var.include_nat_gateway ? 1 : 0

  tags = {
    Name = "${var.name_prefix}-NAT-EIP"
  }
}

resource "aws_nat_gateway" "nat" {
  count         = var.include_nat_gateway ? 1 : 0
  allocation_id = aws_eip.nat_eip[0].id
  subnet_id     = aws_subnet.public_subnets[0].id

  tags = {
    Name = "${var.name_prefix}-NAT-GW"
  }

  depends_on = [aws_internet_gateway.igw]
}


resource "aws_subnet" "public_subnets" {
  count                   = length(var.public_subnets)
  vpc_id                  = aws_vpc.vpc.id
  cidr_block              = var.public_subnets[count.index]
  availability_zone       = var.availability_zones[count.index]
  map_public_ip_on_launch = true

  tags = {
    Name = "${var.name_prefix}public-${var.availability_zones[count.index]}"
  }
}

resource "aws_subnet" "private_subnets" {
  count                   = length(var.private_subnets)
  vpc_id                  = aws_vpc.vpc.id
  cidr_block              = var.private_subnets[count.index]
  availability_zone       = var.availability_zones[count.index]
  map_public_ip_on_launch = false
  tags = {
    Name = "${var.name_prefix}private-${var.availability_zones[count.index]}"
  }
}


# route table
resource "aws_route_table" "public_route_table" {
  vpc_id = aws_vpc.vpc.id

  tags = {
    Name = "${var.name_prefix}public-rt"
  }
}


resource "aws_route" "public_route" {
  route_table_id         = aws_route_table.public_route_table.id
  destination_cidr_block = "0.0.0.0/0"
  gateway_id             = aws_internet_gateway.igw.id
}

resource "aws_route_table_association" "public_rt_associations" {
  count          = length(aws_subnet.public_subnets)
  subnet_id      = aws_subnet.public_subnets[count.index].id
  route_table_id = aws_route_table.public_route_table.id
}

resource "aws_route_table" "private_route_table" {

  vpc_id = aws_vpc.vpc.id
  tags = {
    Name = "${var.name_prefix}private-rt"
  }
}

resource "aws_route" "private_route_to_nat_gw" {
  count                  = var.include_nat_gateway ? 1 : 0
  route_table_id         = aws_route_table.private_route_table.id
  destination_cidr_block = "0.0.0.0/0"
  nat_gateway_id         = aws_nat_gateway.nat[0].id
}

resource "aws_route_table_association" "private_rt_associations" {
  count          = length(aws_subnet.private_subnets)
  subnet_id      = aws_subnet.private_subnets[count.index].id
  route_table_id = aws_route_table.private_route_table.id
}

resource "aws_flow_log" "flow_logs" {
  count                = var.use_vpc_flow_logs != null ? 1 : 0
  log_destination      = var.vpc_flow_logs_bucket
  log_destination_type = "s3"
  traffic_type         = "ALL"
  vpc_id               = aws_vpc.vpc.id
}

resource "aws_cloudtrail" "cloudtrail_logs" {
  count                         = var.use_cloudtrail_logs != null ? 1 : 0
  name                          = "${var.name_prefix}-cloudtrail"
  s3_bucket_name                = var.cloudtrail_logs_bucket
  include_global_service_events = true
  is_multi_region_trail         = true

}
